2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: report error when trying to set
	  construct-only properties

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeassignmentbinding.vala: fix D-Bus signal
	  handlers, fixes bug 528937

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/: mark all cancellable parameters as
	  nullable, fixes bug 528954

	* vapi/gio-2.0.vapi: regenerated

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala,
	  gobject/valaccodeinterfacebinding.vala: support virtual methods
	  in interfaces, fixes bug 443525

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valaattributeprocessor.vala, vala/valaerrortype.vala,
	  vapi/dbus-glib-1.vapi, gobject/valaccodegenerator.vala: get D-Bus
	  sample working again

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala:, vala/valadestructor.vala,
	  vala/valasemanticanalyzer.vala, gobject/valaccodeclassbinding.vala:
	  support `this' access in destructors, fixes bug 527997

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: don't check for `pointer' struct

2008-04-19  Jürg Billeter  <j@bitron.ch>

	Replace `pointer' by `void*' in all bindings and remove pointer
	struct from GLib bindings, fixes bug 510085

2008-04-20  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* vapi/glib-2.0.vapi: replace 'pointer' by 'void*'

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gio-2.0/: fix g_file_monitor_* bindings,
	  patch by Jaap A. Haitsma, fixes bug 528881

	* vapi/gio-2.0.vapi: regenerated

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, vala/valasignal.vala,
	  gobject/valaccodeassignmentbinding.vala: don't mangle D-Bus
	  signal names, fixes bug 528774

2008-04-19  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala, gobject/valaccodegenerator.vala:
	  fix crash when trying to iterate over pointer types,
	  fixes bug 528765
